--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/f7cfd0881f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="js/base.js">
+    <script type="text/javascript" src="js/base.js"></script>
 </head>
 <body>
     <!-- Navbar -->
