--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/f7cfd0881f.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link rel="stylesheet" href="css/base.css">
-    <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="JS/base.js"></script>
 </head>
 <body>
-    <!-- Navbar -->
+    <!-- -----------------------------------Navbar------------------------------ -->
     <nav class="navbar navbar-expand-md navbar-dark">
-    <a style="font-family:Georgia;font-size:2em;color:white" href="#" class="navbar-brand">Futureode</a>
+    <a style="font-family:Courgette;font-size:2em;color:white" href="#" class="navbar-brand">Futureode</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +33,7 @@
         </ul>
     </div>
     </nav>
-    <!-- Carousel -->
+    <!-- ----------------------------------Carousel------------------------------ -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -70,9 +71,7 @@
     </div>
     <header>
         <div class="overlay"></div>
-            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                <source src="video/v1.mp4" type="video/mp4">
-            </video>
+            <img src="images/Welcome.jpg" alt="Welcome">
         <div class="container h-100">
             <div class="d-flex h-90 text-center align-items-center">
                 <div class="w-100 text-white">
@@ -88,152 +87,190 @@
     </header>
     <!--{% block content %}{% endblock %}-->
         <!-- ------------------------------News Feeds----------------------------- -->
-    <div class="container">
-        <h3 class="text-center"><b>Daily Updates</b></h3>
-        <div class="row">
-            <div class="col-lg-4">
-                <p class="text-center">1/3</p>
-            </div>
-            <div class="col-lg-4">
-                <p class="text-center">2/3</p>
-            </div>
-            <div class="col-lg-4">
-                <p class="text-center">3/3</p>
+    <div class="news-feed">    
+        <div class="container">  
+            <h2 class="text-center">Daily Updates</h2>  
+            <div class="row">
+                <div class="col-md-4">
+                    <!-- start sw-rss-feed code --> 
+                    <script type="text/javascript"> 
+                    <!-- 
+                    rssfeed_url = new Array(); 
+                    rssfeed_url[0]="https://economictimes.indiatimes.com/jobs/rssfeeds/107115.cms";  
+                    rssfeed_frame_width="350"; 
+                    rssfeed_frame_height="350"; 
+                    rssfeed_scroll="on"; 
+                    rssfeed_scroll_step="6"; 
+                    rssfeed_scroll_bar="off"; 
+                    rssfeed_target="_blank"; 
+                    rssfeed_font_size="12"; 
+                    rssfeed_font_face=""; 
+                    rssfeed_border="on"; 
+                    rssfeed_css_url=""; 
+                    rssfeed_title="on"; 
+                    rssfeed_title_name=""; 
+                    rssfeed_title_bgcolor="#1ccce4"; 
+                    rssfeed_title_color="#fff"; 
+                    rssfeed_title_bgimage=""; 
+                    rssfeed_footer="off"; 
+                    rssfeed_footer_name="rss feed"; 
+                    rssfeed_footer_bgcolor="#fff"; 
+                    rssfeed_footer_color="#333"; 
+                    rssfeed_footer_bgimage=""; 
+                    rssfeed_item_title_length="50"; 
+                    rssfeed_item_title_color="#000"; 
+                    rssfeed_item_bgcolor="#fff"; 
+                    rssfeed_item_bgimage=""; 
+                    rssfeed_item_border_bottom="on"; 
+                    rssfeed_item_source_icon="off"; 
+                    rssfeed_item_date="off"; 
+                    rssfeed_item_description="on"; 
+                    rssfeed_item_description_length="120"; 
+                    rssfeed_item_description_color="#666"; 
+                    rssfeed_item_description_link_color="#333"; 
+                    rssfeed_item_description_tag="off"; 
+                    rssfeed_no_items="0"; 
+                    rssfeed_cache = "709e9dd112a1573b0e857dedff1f94ff"; 
+                    //--> 
+                    </script> 
+                    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
+                    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+                    <div style="color:#ccc;font-size:10px; text-align:right; width:350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
+                    <!-- end sw-rss-feed code -->
+                </div>
+                <div class="col-md-4">
+                    <!-- start sw-rss-feed code --> 
+                    <script type="text/javascript"> 
+                    <!-- 
+                    rssfeed_url = new Array(); 
+                    rssfeed_url[0]="http://timesofindia.indiatimes.com/rssfeeds/913168846.cms";  
+                    rssfeed_frame_width="350"; 
+                    rssfeed_frame_height="350"; 
+                    rssfeed_scroll="on"; 
+                    rssfeed_scroll_step="6"; 
+                    rssfeed_scroll_bar="off"; 
+                    rssfeed_target="_blank"; 
+                    rssfeed_font_size="12"; 
+                    rssfeed_font_face=""; 
+                    rssfeed_border="on"; 
+                    rssfeed_css_url=""; 
+                    rssfeed_title="on"; 
+                    rssfeed_title_name="Times of India"; 
+                    rssfeed_title_bgcolor="#1ccce4"; 
+                    rssfeed_title_color="#fff"; 
+                    rssfeed_title_bgimage=""; 
+                    rssfeed_footer="off"; 
+                    rssfeed_footer_name="rss feed"; 
+                    rssfeed_footer_bgcolor="#fff"; 
+                    rssfeed_footer_color="#333"; 
+                    rssfeed_footer_bgimage=""; 
+                    rssfeed_item_title_length="50"; 
+                    rssfeed_item_title_color="#000"; 
+                    rssfeed_item_bgcolor="#fff"; 
+                    rssfeed_item_bgimage=""; 
+                    rssfeed_item_border_bottom="on"; 
+                    rssfeed_item_source_icon="off"; 
+                    rssfeed_item_date="off"; 
+                    rssfeed_item_description="on"; 
+                    rssfeed_item_description_length="120"; 
+                    rssfeed_item_description_color="#000"; 
+                    rssfeed_item_description_link_color="#fff"; 
+                    rssfeed_item_description_tag="off"; 
+                    rssfeed_no_items="0"; 
+                    rssfeed_cache = "27b4012f8dfe0345f0015ee27389a88a"; 
+                    //--> 
+                    </script> 
+                    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
+                    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+                    <div style="color:#ccc;font-size:10px; text-align:right; width:350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
+                    <!-- end sw-rss-feed code -->
+                </div>
+                <div class="col-md-4">
+                    <!-- start sw-rss-feed code --> 
+                    <script type="text/javascript"> 
+                    <!-- 
+                    rssfeed_url = new Array(); 
+                    rssfeed_url[0]="http://feeds.bbci.co.uk/news/technology/rss.xml";  
+                    rssfeed_frame_width="350"; 
+                    rssfeed_frame_height="350"; 
+                    rssfeed_scroll="on"; 
+                    rssfeed_scroll_step="6"; 
+                    rssfeed_scroll_bar="off"; 
+                    rssfeed_target="_blank"; 
+                    rssfeed_font_size="12"; 
+                    rssfeed_font_face=""; 
+                    rssfeed_border="on"; 
+                    rssfeed_css_url=""; 
+                    rssfeed_title="on"; 
+                    rssfeed_title_name=""; 
+                    rssfeed_title_bgcolor="#1ccce4"; 
+                    rssfeed_title_color="#fff"; 
+                    rssfeed_title_bgimage=""; 
+                    rssfeed_footer="off"; 
+                    rssfeed_footer_name="rss feed"; 
+                    rssfeed_footer_bgcolor="#fff"; 
+                    rssfeed_footer_color="#333"; 
+                    rssfeed_footer_bgimage=""; 
+                    rssfeed_item_title_length="50"; 
+                    rssfeed_item_title_color="#000"; 
+                    rssfeed_item_bgcolor="#fff"; 
+                    rssfeed_item_bgimage=""; 
+                    rssfeed_item_border_bottom="on"; 
+                    rssfeed_item_source_icon="off"; 
+                    rssfeed_item_date="off"; 
+                    rssfeed_item_description="on"; 
+                    rssfeed_item_description_length="120"; 
+                    rssfeed_item_description_color="#000"; 
+                    rssfeed_item_description_link_color="#fff"; 
+                    rssfeed_item_description_tag="off"; 
+                    rssfeed_no_items="0"; 
+                    rssfeed_cache = "bfa8c44970060b6e765d4da76b427543"; 
+                    //--> 
+                    </script> 
+                    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
+                    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+                    <div style="color:#ccc;font-size:10px; text-align:right; width:350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
+                    <!-- end sw-rss-feed code -->
+                </div>
             </div>
         </div>
     </div>
-
-       <!-- Footer -->
-    <footer class="page-footer font-small unique-color-dark">
-
-    <div style="background-color: #6351ce;">
-        <div class="container">
-
-        <!-- Grid row-->
-        <div class="row py-4 d-flex align-items-center">
-
-            <!-- Grid column -->
-            <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-            <h6 class="mb-0">Get connected with us on social networks!</h6>
+    <!-- ----------------------------------Footer-------------------------------- -->
+    <div class="container-fluid-sm">
+        <footer class="footer-bs">
+            <div class="row" id="footer">
+                <div class="col-md-3 footer-brand animated fadeInLeft">
+                    <h2>Futureode</h2>
+                    <p>Helping students asses their skills<br>and knowledge and choose the<br> right career path</p>
+                </div>
+                <div class="col-md-3 footer-nav animated fadeInUp pl-5">
+                    <h4>Know more</h4>    
+                        <ul class="list">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contacts</a></li>
+                            <li><a href="#">Terms & Condition</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                        </ul>
+                </div>
+                <div class="col-md-3 footer-social animated fadeInDown">
+                    <h4>Follow Us</h4>
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">RSS</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-ns animated fadeInRight">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Career Updates</a></li>
+                        <li><a href="#">Path Finder</a></li>
+                        <li><a href="#">Interesting Jobs</a></li>
+                    </ul>
+                </div>
             </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-            <!-- Facebook -->
-            <a class="fb-ic">
-                <i class="fab fa-facebook-f white-text mr-4"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="tw-ic">
-                <i class="fab fa-twitter white-text mr-4"> </i>
-            </a>
-            <!-- Google +-->
-            <a class="gplus-ic">
-                <i class="fab fa-google-plus-g white-text mr-4"> </i>
-            </a>
-            <!--Linkedin -->
-            <a class="li-ic">
-                <i class="fab fa-linkedin-in white-text mr-4"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic">
-                <i class="fab fa-instagram white-text"> </i>
-            </a>
-
-            </div>
-            <!-- Grid column -->
-
-        </div>
-        <!-- Grid row-->
-
-        </div>
-    </div>
-
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left mt-5">
-
-        <!-- Grid row -->
-        <div class="row mt-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-
-            <!-- Content -->
-            <h6 class="text-uppercase font-weight-bold">Company name</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>FUTUREODE Technologies</p>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase font-weight-bold">Products</h6>
-                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                <p>
-                    <a href="#!">Futureode PathFinder</a>
-                </p>
-                <p>
-                    <a href="#!">Futureode Recomender</a>
-                </p>
-                <p>
-                    <a href="#!">Futureode CareerPath</a>
-                </p>
-                <p>
-                    <a href="#!">Futureode ****</a>
-                </p>
-            </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-            <!-- Links -->
-            <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>
-            <a href="#!">Profile</a>
-            </p>
-            <p>
-            <a href="#!">Contact Career Expert</a>
-            </p>
-            <p>
-            <a href="#!">Technologies</a>
-            </p>
-            <p>
-            <a href="#!">Help</a>
-            </p>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-            <!-- Links -->
-            <h6 class="text-uppercase font-weight-bold">Contact</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>
-            <i class="fas fa-home mr-3"></i>Trivandrum, Kerala, India</p>
-            <p>
-            <i class="fas fa-envelope mr-3"></i>futureode@gmail.com</p>
-            <p>
-            <i class="fas fa-phone mr-3"></i>+91 987654321</p>
-            <p>
-            <i class="fas fa-print mr-3"></i>+91 978675645</p>
-
-        </div>
-        <!-- Grid column -->
-
-        </div>
-        <!-- Grid row -->
-
-    </div>
-    <!-- Footer Links -->
-    </footer>
-    <!-- Footer -->
+        </footer>
 </body>
 </html>
