--- a/index.html
+++ b/index.html
@@ -88,151 +88,9 @@
     <!--{% block content %}{% endblock %}-->
         <!-- ------------------------------News Feeds----------------------------- -->
     <div class="news-feed">    
-        <div class="container">  
+        <div class="container-fluid">  
             <h2 class="text-center">Daily Updates</h2>  
-            <div class="row">
-                <div class="col-md-4">
-                    <!-- start sw-rss-feed code --> 
-                    <script type="text/javascript"> 
-                    <!-- 
-                    rssfeed_url = new Array(); 
-                    rssfeed_url[0]="https://economictimes.indiatimes.com/jobs/rssfeeds/107115.cms";  
-                    rssfeed_frame_width="350"; 
-                    rssfeed_frame_height="350"; 
-                    rssfeed_scroll="on"; 
-                    rssfeed_scroll_step="6"; 
-                    rssfeed_scroll_bar="off"; 
-                    rssfeed_target="_blank"; 
-                    rssfeed_font_size="12"; 
-                    rssfeed_font_face=""; 
-                    rssfeed_border="on"; 
-                    rssfeed_css_url=""; 
-                    rssfeed_title="on"; 
-                    rssfeed_title_name=""; 
-                    rssfeed_title_bgcolor="#1ccce4"; 
-                    rssfeed_title_color="#fff"; 
-                    rssfeed_title_bgimage=""; 
-                    rssfeed_footer="off"; 
-                    rssfeed_footer_name="rss feed"; 
-                    rssfeed_footer_bgcolor="#fff"; 
-                    rssfeed_footer_color="#333"; 
-                    rssfeed_footer_bgimage=""; 
-                    rssfeed_item_title_length="50"; 
-                    rssfeed_item_title_color="#000"; 
-                    rssfeed_item_bgcolor="#fff"; 
-                    rssfeed_item_bgimage=""; 
-                    rssfeed_item_border_bottom="on"; 
-                    rssfeed_item_source_icon="off"; 
-                    rssfeed_item_date="off"; 
-                    rssfeed_item_description="on"; 
-                    rssfeed_item_description_length="120"; 
-                    rssfeed_item_description_color="#666"; 
-                    rssfeed_item_description_link_color="#333"; 
-                    rssfeed_item_description_tag="off"; 
-                    rssfeed_no_items="0"; 
-                    rssfeed_cache = "709e9dd112a1573b0e857dedff1f94ff"; 
-                    //--> 
-                    </script> 
-                    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
-                    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-                    <div style="color:#ccc;font-size:10px; text-align:right; width:350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
-                    <!-- end sw-rss-feed code -->
-                </div>
-                <div class="col-md-4">
-                    <!-- start sw-rss-feed code --> 
-                    <script type="text/javascript"> 
-                    <!-- 
-                    rssfeed_url = new Array(); 
-                    rssfeed_url[0]="http://timesofindia.indiatimes.com/rssfeeds/913168846.cms";  
-                    rssfeed_frame_width="350"; 
-                    rssfeed_frame_height="350"; 
-                    rssfeed_scroll="on"; 
-                    rssfeed_scroll_step="6"; 
-                    rssfeed_scroll_bar="off"; 
-                    rssfeed_target="_blank"; 
-                    rssfeed_font_size="12"; 
-                    rssfeed_font_face=""; 
-                    rssfeed_border="on"; 
-                    rssfeed_css_url=""; 
-                    rssfeed_title="on"; 
-                    rssfeed_title_name="Times of India"; 
-                    rssfeed_title_bgcolor="#1ccce4"; 
-                    rssfeed_title_color="#fff"; 
-                    rssfeed_title_bgimage=""; 
-                    rssfeed_footer="off"; 
-                    rssfeed_footer_name="rss feed"; 
-                    rssfeed_footer_bgcolor="#fff"; 
-                    rssfeed_footer_color="#333"; 
-                    rssfeed_footer_bgimage=""; 
-                    rssfeed_item_title_length="50"; 
-                    rssfeed_item_title_color="#000"; 
-                    rssfeed_item_bgcolor="#fff"; 
-                    rssfeed_item_bgimage=""; 
-                    rssfeed_item_border_bottom="on"; 
-                    rssfeed_item_source_icon="off"; 
-                    rssfeed_item_date="off"; 
-                    rssfeed_item_description="on"; 
-                    rssfeed_item_description_length="120"; 
-                    rssfeed_item_description_color="#000"; 
-                    rssfeed_item_description_link_color="#fff"; 
-                    rssfeed_item_description_tag="off"; 
-                    rssfeed_no_items="0"; 
-                    rssfeed_cache = "27b4012f8dfe0345f0015ee27389a88a"; 
-                    //--> 
-                    </script> 
-                    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
-                    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-                    <div style="color:#ccc;font-size:10px; text-align:right; width:350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
-                    <!-- end sw-rss-feed code -->
-                </div>
-                <div class="col-md-4">
-                    <!-- start sw-rss-feed code --> 
-                    <script type="text/javascript"> 
-                    <!-- 
-                    rssfeed_url = new Array(); 
-                    rssfeed_url[0]="http://feeds.bbci.co.uk/news/technology/rss.xml";  
-                    rssfeed_frame_width="350"; 
-                    rssfeed_frame_height="350"; 
-                    rssfeed_scroll="on"; 
-                    rssfeed_scroll_step="6"; 
-                    rssfeed_scroll_bar="off"; 
-                    rssfeed_target="_blank"; 
-                    rssfeed_font_size="12"; 
-                    rssfeed_font_face=""; 
-                    rssfeed_border="on"; 
-                    rssfeed_css_url=""; 
-                    rssfeed_title="on"; 
-                    rssfeed_title_name=""; 
-                    rssfeed_title_bgcolor="#1ccce4"; 
-                    rssfeed_title_color="#fff"; 
-                    rssfeed_title_bgimage=""; 
-                    rssfeed_footer="off"; 
-                    rssfeed_footer_name="rss feed"; 
-                    rssfeed_footer_bgcolor="#fff"; 
-                    rssfeed_footer_color="#333"; 
-                    rssfeed_footer_bgimage=""; 
-                    rssfeed_item_title_length="50"; 
-                    rssfeed_item_title_color="#000"; 
-                    rssfeed_item_bgcolor="#fff"; 
-                    rssfeed_item_bgimage=""; 
-                    rssfeed_item_border_bottom="on"; 
-                    rssfeed_item_source_icon="off"; 
-                    rssfeed_item_date="off"; 
-                    rssfeed_item_description="on"; 
-                    rssfeed_item_description_length="120"; 
-                    rssfeed_item_description_color="#000"; 
-                    rssfeed_item_description_link_color="#fff"; 
-                    rssfeed_item_description_tag="off"; 
-                    rssfeed_no_items="0"; 
-                    rssfeed_cache = "bfa8c44970060b6e765d4da76b427543"; 
-                    //--> 
-                    </script> 
-                    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
-                    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-                    <div style="color:#ccc;font-size:10px; text-align:right; width:350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
-                    <!-- end sw-rss-feed code -->
-                </div>
-            </div>
+            <div class="powr-rss-feed" id="06bd3cbe_1619853776"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
         </div>
     </div>
     <!-- ----------------------------------Footer-------------------------------- -->
