Update html and css

--- a/index.html
+++ b/index.html
@@ -94,41 +94,120 @@
         </div>
     </div>
     <!-- ----------------------------------Footer-------------------------------- -->
-    <div class="container-fluid-sm">
-        <footer class="footer-bs">
-            <div class="row" id="footer">
-                <div class="col-md-3 footer-brand animated fadeInLeft">
-                    <h2>Futureode</h2>
-                    <p>Helping students asses their skills<br>and knowledge and choose the<br> right career path</p>
-                </div>
-                <div class="col-md-3 footer-nav animated fadeInUp pl-5">
-                    <h4>Know more</h4>    
-                        <ul class="list">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contacts</a></li>
-                            <li><a href="#">Terms & Condition</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul>
-                </div>
-                <div class="col-md-3 footer-social animated fadeInDown">
-                    <h4>Follow Us</h4>
-                    <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">RSS</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 footer-ns animated fadeInRight">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Career Updates</a></li>
-                        <li><a href="#">Path Finder</a></li>
-                        <li><a href="#">Interesting Jobs</a></li>
-                    </ul>
-                </div>
+    <footer class="bg-dark text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <div>
+                <img src="images/Futureode.png" alt="Logo">
             </div>
-        </footer>
+            <!-- Section: Social media -->
+            <section class="mb-4">
+            <!-- Facebook -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-facebook-f"></i
+            ></a>
+
+            <!-- Twitter -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-twitter"></i
+            ></a>
+
+            <!-- Google -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-google"></i
+            ></a>
+
+            <!-- Instagram -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-instagram"></i
+            ></a>
+
+            <!-- Linkedin -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-linkedin-in"></i
+            ></a>
+
+            <!-- Github -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-github"></i
+            ></a>
+            </section>
+            <!-- Section: Social media -->
+
+            <!-- Section: Text -->
+            <section class="mb-4">
+            <p>
+                Helping students asses their skills and knowledge and choose the right career path.
+            </p>
+            </section>
+            <!-- Section: Text -->
+
+            <!-- Section: Links -->
+            <section class="">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                <ul class="list-unstyled mb-0">
+                    <li>
+                    <a href="#!" class="text-white">About Us</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Contact</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Privacy Policy</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Terms & Conditions</a>
+                    </li>
+                </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                <ul class="list-unstyled mb-0">
+                    <li>
+                    <a href="#!" class="text-white">Home</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Path Finder</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">News Feeds</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Career Updates</a>
+                    </li>
+                </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                <ul class="list-unstyled mb-0">
+                    <li>
+                    <a href="#!" class="text-white">ML</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">NLTK</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Recommender</a>
+                    </li>
+                    <li>
+                    <a href="#!" class="text-white">Big5PersonalityTraits</a>
+                    </li>
+                </ul>
+                </div>
+                <!--Grid column-->
+            </div>
+            <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+        </div>
+    <!-- Grid container -->
+    </footer>
 </body>
 </html>
